--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cypress run --spec\"cypress/integration/regression/Regression2.spec.js\"",
+    "open": "cypress open"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "homepage": "https://github.com/galuszkamarta/cypressWithDOCKER-CUCUMBER#readme",
   "dependencies": {
     "cypress": "^8.4.0"
+  },
+  "devDependencies": {
+    "cypress-xpath": "^1.6.2"
   }
 }
