--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "cypress": "^8.4.0"
   },
   "devDependencies": {
-    "cypress-xpath": "^1.6.2"
+    "csv-parse": "^4.16.3",
+    "cypress-xpath": "^1.6.2",
+    "xlsx": "^0.17.2"
   }
 }
