--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "csv-parse": "^4.16.3",
+    "cypress-file-upload": "^5.0.8",
     "cypress-xpath": "^1.6.2",
     "xlsx": "^0.17.2"
   }
